--- a/style.css
+++ b/style.css
@@ -15,3 +15,22 @@ body
   min-height: 100vh;
   background:url("folha_de_caderno.jpg");
 }
+h2
+{
+  position: relative;
+  font-size: 14vh;
+  color: ;
+  -webkit-text-stroke: 0.3vh #383d52;
+  text-transform: uppercase;
+}
+h2::before
+{
+  content: attr(data-text);
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #01fe87;
+  -webkit-text-stroke: 0vw #383d52;
+}
