--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ body
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background:url("folha_de_caderno.jpg");
+  background:#252839;
 }
 h2
 {
   position: relative;
   font-size: 14vh;
-  color: ;
+  color: #252839;
   -webkit-text-stroke: 0.3vh #383d52;
   text-transform: uppercase;
 }
@@ -29,8 +29,23 @@ h2::before
   position: absolute;
   top:0;
   left: 0;
-  width: 100%;
+  width: 0;
   height: 100%;
   color: #01fe87;
   -webkit-text-stroke: 0vw #383d52;
+  border-right:2px solid #01fe87;
+  overflow: hidden;
+  animation: animate 6% linear infinite;
 }
+@keyframes animate
+{
+  0%
+  {
+    width: 0;
+  }
+  0%
+  {
+    width: 0; 
+  }
+}
+
