--- a/style.css
+++ b/style.css
@@ -39,13 +39,13 @@ h2::before
 }
 @keyframes animate
 {
-  0%
+  0%,10%,100%
   {
     width: 0;
   }
-  0%
+  70%,90%
   {
-    width: 0; 
+    width: 100%; 
   }
 }
 
